# qtgstplayer

./: CMakeLists.txt
source/: main.cpp  mainwindow.cpp  mainwindow.hpp
source/gstplayer/: glesgeneric.cpp  gstplayer.cpp  gstplayer.hpp  pipeline.cpp  qglrenderer.cpp  qglrenderer.h
